Bug fix regarding the leftnavbar on mobile device, creation of the user profile page, management of the profile photo

--- a/client/src/styles/pages/_profil.scss
+++ b/client/src/styles/pages/_profil.scss
@@ -119,6 +119,7 @@ body {
     }
   }
   h1 {
+    font-size: 1.5em;
     text-align: center;
     margin: 10px 0 6px;
   }
@@ -196,21 +197,23 @@ body {
         }
         input[type="file"] {
           position: absolute;
-          opacity: 1;
-          transform: translate(-3px, -50%);
+          opacity: 2;
+          transform: translateX(3px);
           cursor: pointer;
-          padding: 10px 20px;
+          margin-top: -5px;
+          padding: 5px 20px;
 
           @media screen and (max-width: 1121px) {
-            opacity: 0;
+            opacity: 1;
           }
         }
         input[type="submit"] {
-          margin-top: 10px;
+          margin-top: 50px;
           border-radius: 10px;
+          color: black;
 
           &:hover {
-            letter-spacing: 1px;
+            transform: translateX(3px);
           }
         }
       }
